tirando Arrays